--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,30 @@
-
 {
-  "eslint.format.enable": true,
-  "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true
-  },
-  "eslint.validate": ["javascript"]
+	// START: Settings for Eslint and Prettier
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"editor.formatOnSave": true,
+	"[javascript]": {
+		"editor.formatOnSave": false
+	},
+
+	"[javascriptreact]": {
+		"editor.formatOnSave": false,
+		"editor.defaultFormatter": null
+	},
+
+	"editor.codeActionsOnSave": {
+		"source.fixAll": true
+	},
+	"eslint.alwaysShowStatus": true,
+	"eslint.validate": [
+		"javascript",
+		"javascriptreact",
+		"typescript",
+		"typescriptreact"
+	],
+	// START: Settings for Prettier
+	"prettier.useTabs": true,
+	"prettier.jsxSingleQuote": false,
+	"prettier.tabWidth": 2,
+	"prettier.arrowParens": "avoid",
+	"prettier.singleQuote": true
 }
